Fixed minor mobile bug where navbar could be still be seen when collapsed

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -71,6 +71,7 @@
   border-bottom: 1px outset var(--blue1);
   background: white;
   z-index: 99;
+  visibility: hidden;
 }
 
 .dropdown-navbar-icon {
@@ -182,27 +183,29 @@
 
 @keyframes slide-down-nav {
   0% {
-    opacity: 0;
+    visibility: hidden;
     transform: translateY(-100%);
   }
   1% {
-    opacity: 1;
+    visibility: visible;
   }
   100% {
     transform: translateY(0);
+    visibility: visible;
   }
 }
 
 @keyframes slide-up-nav {
   0% {
     transform: translateY(0);
+    visibility: visible;
   }
   99% {
-    opacity: 1;
+    visibility: visible;
   }
   100% {
     transform: translateY(-100%);
-    opacity: 0;
+    visibility: hidden;
   }
 }
 
